objects/Demo_Request_Tracking__c.object
<CustomObject>
    <description>What it does?  Object for tracking activities associated with a DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Activity_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does?  Holds name of demonstrator that completed the demo request.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Request_Activities_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Date_Time__c</fullName>
        <description>What it does?  Holds the date and time of the DR activity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Activity Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Duration__c</fullName>
        <description>What it does?  Holds the duration of the DR activity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Activity Duration</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_State__c</fullName>
        <description>What it does? Holds the state of the activity associated with the DR. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>What it does?  Shows the type of demo request activity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Demo Setup</fullName>
                </value>
                <value>
                    <fullName>Demo Shadow</fullName>
                </value>
                <value>
                    <fullName>Demo Training</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Prep Call</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Demo_Description__c</fullName>
        <description>What it Does?  Description of custom configuration or development for demo.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <inlineHelpText>Description of custom configuration</inlineHelpText>
        <label>Custom Demo Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Specifies if the demo presented was Custom.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Custom Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Request__c</fullName>
        <description>What it does?  Holds a link to the DR associated with the activity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Demo Request</label>
        <referenceTo>Demo_Request__c</referenceTo>
        <relationshipLabel>Activity Tracking</relationshipLabel>
        <relationshipName>Demo_Request_Activities_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GTM_ConfCall__c</fullName>
        <description>What it does?  Holds the GTM conference call info associated with the DR activity.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>GoToMeeting Conference Call Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GoToMeeting_ID__c</fullName>
        <description>What it does?  Holds the GTM meeting ID for the DR activity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>GoToMeeting ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoToMeeting_JoinURL__c</fullName>
        <description>What it does?  Holds the join URL for the GTM meeting for the DR activity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>GoToMeeting JoinURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ININ_Record_ID__c</fullName>
        <description>Holds the original record&apos;s ID if this record was imported from the ININ org.</description>
        <label>ININ Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesLong__c</fullName>
        <description>What it does?  Holds notes about the DR activity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>What it does?  Holds notes about the DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>(Obsolete) Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityStageAtCompletion__c</fullName>
        <description>What it does?  Holds the stage of opportunity at completion of the DR.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>OpportunityStageAtCompletion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Pre-Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Discovery &amp; Analysis</fullName>
                </value>
                <value>
                    <fullName>Designing Solution &amp; Establish Price</fullName>
                </value>
                <value>
                    <fullName>Confirming Value</fullName>
                </value>
                <value>
                    <fullName>Negotiating Price &amp; Terms</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Awaiting Signature</fullName>
                </value>
                <value>
                    <fullName>Ready to Order</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Order Rejected - Data</fullName>
                </value>
                <value>
                    <fullName>Order Rejected - Contract</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed - No Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Applications_Demonstrated__c</fullName>
        <description>What it does?  Holds other applications demonstrated during the demo.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Other Applications Demonstrated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>demosGivenCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does?  For tradeshows, number of demos presented.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>demosGivenCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hasEvent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>What it Does?  Boolean to indicate if this activity has a calendar event associated.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>hasEvent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does?  Set to true if this activity is a template to create new activities from.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>isTemplate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peopleCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does?  For tradeshows, how many people did you talk to meaningfully.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>peopleCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>timeCompleted__c</fullName>
        <description>Wha tit Does?  A timestamp of when the activity was marked completed.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>timeCompleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>timeToComplete__c</fullName>
        <description>What it Does?  Length of time to complete the activity (CompletedDateTime - ActivityDateTime).  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <formula>timeCompleted__c -  Activity_Date_Time__c</formula>
        <label>timeToComplete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Demo Request Activity Tracking</label>
    <nameField>
        <displayFormat>DRT-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Demo Request Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Request Activities Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>